[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/ship.png" type="Texture" id=2]
[ext_resource path="res://hitflash.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/bomb.png" type="Texture" id=4]
[ext_resource path="res://Player/PlayerCannon.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/hitHurt.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/wave.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/error.wav" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 40.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 36.0

[sub_resource type="Animation" id=5]
resource_name = "bombex"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BombExplosion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 100, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BombExplosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
scale = Vector2( 0.6, 0.6 )
collision_layer = 3
script = ExtResource( 1 )

[node name="PlayerCannon" parent="." instance=ExtResource( 5 )]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -16.6667, 1.66667 )
shape = SubResource( 2 )

[node name="EnergyDrainTimer" type="Timer" parent="."]
autostart = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="BombExplosion" type="Sprite" parent="."]
visible = false
scale = Vector2( 100, 100 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bombex = SubResource( 5 )

[node name="BombSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="FailSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="hit" from="." to="." method="_on_Player_hit"]
[connection signal="pickup" from="." to="." method="_on_Player_pickup"]
[connection signal="timeout" from="EnergyDrainTimer" to="." method="_on_EnergyDrainTimer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
